Script for building linux installers